--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
