--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/jacobbroughton/notes-app-backend#readme",
   "dependencies": {
+    "@lexical/selection": "^0.9.0",
     "connect-pg-simple": "^7.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
