added gitignore because i'm an idiot

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-SESSION_SECRET=83O_+%!asDVSZ89bBkMnd_EnDCVvx++
+# IF YOU SEE THIS YOU WEREN'T SUPPOSED TO
+SESSION_SECRET=AS!@FA_Asdrwa*^@aVsxDdadFDFasdfZXCVEnDCVvx++
 
 DB_HOST_DEV=localhost
 DB_PORT_DEV=8889
@@ -11,9 +12,6 @@ DB_PORT_PROD=3306
 DB_USER_PROD=ozwsyza0oqftwa9esri6
 DB_PASSWORD_PROD=pscale_pw_CiNDp2fRgzBR7D3DhzPmvJSX07gcFCySfG37JhUn9MI
 DB_NAME_PROD=notes-app
-
-DB_USER_PROD_OLD=njek4vejzk5q2pqwb77j
-DB_PASSWORD_PROD_OLD=pscale_pw_7fvDEyz5fs9jISZpvuucGbkwX7irNSnPHKPASFlcNav
 
 NODE_ENV=development
 
