migrated to postgres

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/jacobbroughton/notes-app-backend#readme",
   "dependencies": {
     "@lexical/selection": "^0.9.0",
+    "bcrypt": "^5.1.1",
     "concurrently": "^8.0.1",
     "connect-pg-simple": "^7.0.0",
     "cookie-parser": "^1.4.6",
@@ -35,6 +36,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pg": "^8.12.0"
   }
 }
